[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Spear.png" type="Texture" id=1]
[ext_resource path="res://Player/Spear.gd" type="Script" id=2]
[ext_resource path="res://CheckBoxes/HitBox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 2 )

[sub_resource type="Animation" id=2]
resource_name = "Auto"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00203761 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00203761 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ), Vector2( 40, 3 ), Vector2( 10, 0 ), Vector2( 40, -3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/HitBox/Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
} ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/HitBox/Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.00986322, 0.0198632, 0.0298632, 0.04, 0.0498632, 0.0598632, 0.0698632, 0.08, 0.09, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
}, {
"args": [  ],
"method": "particle_spawn"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/HitBox/Collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Spear" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 10, 0 )
texture = ExtResource( 1 )

[node name="Tip" type="Position2D" parent="Sprite"]
position = Vector2( 22, 4.37114e-06 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="HitBox" parent="Sprite" instance=ExtResource( 3 )]
collision_layer = 8
damage = 2

[node name="Collider" parent="Sprite/HitBox" index="0"]
position = Vector2( 17, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Auto = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Spin = SubResource( 4 )

[node name="ChangeState" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hold" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="ChangeState" to="." method="_on_ChangeState_timeout"]
[connection signal="timeout" from="Hold" to="." method="_on_Hold_timeout"]

[editable path="Sprite/HitBox"]
